--- a/sc-carousel.html
+++ b/sc-carousel.html
@@ -11,6 +11,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../neon-animation/neon-animation.html">
 <link rel="import" href="../neon-animation/neon-animations.html">
 <link rel="import" href="../neon-animation/neon-animated-pages.html">
+<!--
+### How to use
+
+```html
+  <sc-carousel>
+    <img src="http://lorempixel.com/640/480/cats">
+    <img src="http://lorempixel.com/640/480/sports">
+    <img src="http://lorempixel.com/640/480/animals">
+  </sc-carousel>
+```
+
+Contributions welcome, please create issues!
+@demo index.html
+-->
 
 <dom-module id="sc-carousel">
   <template>
